+ bx-slider + validator - OK! (without yander script), and other

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -556,6 +556,50 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "6266f912": {
+          "id": "6266f912",
+          "path": "js/jquery.bxslider.min.js",
+          "output": "js/jquery.bxslider.min-dist.js",
+          "name": "jquery.bxslider.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "94dffd20": {
+          "id": "94dffd20",
+          "path": "css/jquery.bxslider.css",
+          "output": "css/jquery.bxslider-dist.css",
+          "name": "jquery.bxslider.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "8d200ee5": {
+          "id": "8d200ee5",
+          "path": "css/images/controls.png",
+          "output": "css/images/controls.png",
+          "name": "controls.png",
+          "category": "IMAGE",
+          "size": 2806,
+          "type": "png",
+          "initialSize": 2806,
+          "optimized": false,
+          "height": 63,
+          "width": 96
         }
       },
       "deploymentHistory": {},
