--- a/prepros.cfg
+++ b/prepros.cfg
@@ -600,6 +600,22 @@
           "optimized": false,
           "height": 63,
           "width": 96
+        },
+        "742d8b2c": {
+          "id": "742d8b2c",
+          "path": "css/bootstrap.min.css",
+          "output": "css/bootstrap.min-dist.css",
+          "name": "bootstrap.min.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
