all pages finish

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -475,19 +475,6 @@
           "height": 16,
           "width": 16
         },
-        "6877ffa4": {
-          "id": "6877ffa4",
-          "path": "images/images/pattern-background-red.png",
-          "output": "images/images/pattern-background-red.png",
-          "name": "pattern-background-red.png",
-          "category": "IMAGE",
-          "size": 1007,
-          "type": "png",
-          "initialSize": 1007,
-          "optimized": false,
-          "height": 3,
-          "width": 3
-        },
         "2107842d": {
           "id": "2107842d",
           "path": "images/pattern-background-red.png",
@@ -601,21 +588,129 @@
           "height": 63,
           "width": 96
         },
-        "742d8b2c": {
-          "id": "742d8b2c",
-          "path": "css/bootstrap.min.css",
-          "output": "css/bootstrap.min-dist.css",
-          "name": "bootstrap.min.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
+        "e8366bee": {
+          "id": "e8366bee",
+          "path": "vacancy.html",
+          "output": "vacancy.html",
+          "name": "vacancy.html",
+          "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "css"
+          "type": "html"
+        },
+        "f871544f": {
+          "id": "f871544f",
+          "path": "images/icon-compass.png",
+          "output": "images/icon-compass.png",
+          "name": "icon-compass.png",
+          "category": "IMAGE",
+          "size": 6880,
+          "type": "png",
+          "initialSize": 6880,
+          "optimized": false,
+          "height": 128,
+          "width": 148
+        },
+        "0a4245b4": {
+          "id": "0a4245b4",
+          "path": "images/man-top-slide-vacancy_03.png",
+          "output": "images/man-top-slide-vacancy_03.png",
+          "name": "man-top-slide-vacancy_03.png",
+          "category": "IMAGE",
+          "size": 149832,
+          "type": "png",
+          "initialSize": 149832,
+          "optimized": false,
+          "height": 422,
+          "width": 320
+        },
+        "c1749a76": {
+          "id": "c1749a76",
+          "path": "images/bacground-top-slide-vacancy.jpg",
+          "output": "images/bacground-top-slide-vacancy.jpg",
+          "name": "bacground-top-slide-vacancy.jpg",
+          "category": "IMAGE",
+          "size": 22356,
+          "type": "jpg",
+          "initialSize": 22356,
+          "optimized": false,
+          "height": 516,
+          "width": 1281
+        },
+        "0ffc35d4": {
+          "id": "0ffc35d4",
+          "path": "index.html",
+          "output": "index.html",
+          "name": "index.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "cd647346": {
+          "id": "cd647346",
+          "path": "images/icon-phone-white.png",
+          "output": "images/icon-phone-white.png",
+          "name": "icon-phone-white.png",
+          "category": "IMAGE",
+          "size": 1143,
+          "type": "png",
+          "initialSize": 1143,
+          "optimized": false,
+          "height": 16,
+          "width": 16
+        },
+        "e861d4d1": {
+          "id": "e861d4d1",
+          "path": "images/background-top-slide-index.jpg",
+          "output": "images/background-top-slide-index.jpg",
+          "name": "background-top-slide-index.jpg",
+          "category": "IMAGE",
+          "size": 37193,
+          "type": "jpg",
+          "initialSize": 37193,
+          "optimized": false,
+          "height": 515,
+          "width": 1281
+        },
+        "df1e1066": {
+          "id": "df1e1066",
+          "path": "images/top-slide-man-index.png",
+          "output": "images/top-slide-man-index.png",
+          "name": "top-slide-man-index.png",
+          "category": "IMAGE",
+          "size": 161179,
+          "type": "png",
+          "initialSize": 161179,
+          "optimized": false,
+          "height": 440,
+          "width": 408
+        },
+        "bd12cac8": {
+          "id": "bd12cac8",
+          "path": "workers.html",
+          "output": "workers.html",
+          "name": "workers.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "1d2c3512": {
+          "id": "1d2c3512",
+          "path": "images/background-top-slide-wokers.jpg",
+          "output": "images/background-top-slide-wokers.jpg",
+          "name": "background-top-slide-wokers.jpg",
+          "category": "IMAGE",
+          "size": 33380,
+          "type": "jpg",
+          "initialSize": 33380,
+          "optimized": false,
+          "height": 515,
+          "width": 1280
         }
       },
       "deploymentHistory": {},
