--- a/prepros.cfg
+++ b/prepros.cfg
@@ -711,6 +711,17 @@
           "optimized": false,
           "height": 515,
           "width": 1280
+        },
+        "d749c9ad": {
+          "id": "d749c9ad",
+          "path": "handler.php",
+          "output": "handler.php",
+          "name": "handler.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
