--- a/prepros.cfg
+++ b/prepros.cfg
@@ -30,7 +30,7 @@
           "category": "CSS",
           "autoCompile": true,
           "autoprefixer": true,
-          "compress": false,
+          "compress": true,
           "sourceMaps": false,
           "strictMath": false,
           "strictUnits": false,
